--- a/css/style.css
+++ b/css/style.css
@@ -653,7 +653,8 @@ h1, h2, h3, h4, h5,
 
 .slide-1 {
   background-size: cover;
-  background-position: center; }
+  background-position: center; 
+  background-repeat: no-repeat;}
   .slide-1:before {
     content: "";
     position: absolute;
